force-app/main/default/objects/Student__c/fields/Test_2__c.field-meta.xml
<CustomField>
    <fullName>Test_2__c</fullName>
    <label>Test 2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>