force-app/main/default/objects/Student__c/fields/Test_3__c.field-meta.xml
<CustomField>
    <fullName>Test_3__c</fullName>
    <label>Test 3</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>